Bug 332893.  <form>.elements['x'] order is not updated after reordering element using DOM.  r=bzbarsky